# LoggingBot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  export-dockerimage.sh  prep-dockerimage.sh  release-please-config.json  test-dockerimage.sh
.github/workflows/: release-please.yml
src/: main.rs
