[package]
name = "logging_bot"
version = "1.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.3"
lazy_static = "1.4.0"
chrono = "0.4"
# https://github.com/serenity-rs/serenity
serenity = { default-features = false, features = ["client", "gateway", "rustls_backend", "model", "builder", "cache"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
